# common_interfaces

./: CMakeLists.txt  README.md
common_interfaces/: CMakeLists.txt  package.xml
common_interfaces/include/common_interfaces/: abstract_buffer_converter.h  data_conversion.h  interface_port_data.h  interface_ports.h  interface_ports_fwd.h  interface_rx.h  interface_tx.h  interfaces.h  message_concate.h  message_split.h
common_interfaces_test/: CMakeLists.txt  package.xml
common_interfaces_test/tests/: container_utils.cpp  container_utils.h  deployer_rx.cpp  deployer_tx.cpp  msg_concate_unittest.cpp  msg_rx_tx.cpp  msg_split_unittest.cpp  test_deployer.cpp  test_deployer.h
common_interfaces_test_msgs/common_interfaces_test_msgs/: CMakeLists.txt  package.xml
common_interfaces_test_msgs/common_interfaces_test_msgs/msg/: Container.msg  SubContainer.msg  SubSubContainer.msg
common_interfaces_test_msgs/rtt_common_interfaces_test_msgs/: CMakeLists.txt  package.xml
common_interfaces_test_msgs/rtt_common_interfaces_test_subsystem_ports/: CMakeLists.txt  package.xml
include/common_interfaces/: interface_ports.h  interface_rx.h  interface_tx.h  message_concate.h  message_split.h
tests/: Container.h  SubContainer.h  SubSubContainer.h  gtest_main.cc  msg_concate_unittest.cpp  msg_split_unittest.cpp  test_ports.cpp  test_ports.h
